# warehouse

./: .env  .gitignore  .pylintrc  Dockerfile  README.md  docker-compose.yml  docker-entrypoint.sh  docker-web-command.sh  mypy.ini  pyproject.toml  warehouse.postman_collection.json
inventory/: business_logic.py  data_business_objects.py  models.py  repositories.py  upload_parsers.py  urls.py  views.py
inventory/business_logic/: business_logic.py  data_transfer_objects.py  upload_parsers.py
inventory/migrations/: 0001_initial.py  0002_auto_20210415_2227.py
warehouse/: settings.py  urls.py
